@@ -1,3 +1,14 @@
+2007-12-11  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* haskell-mode.el (haskell-delete-indentation): New command.
+	(haskell-mode-map): Use it.
+
+	* haskell-doc.el (haskell-doc-in-code-p): New function.
+	(haskell-doc-show-type): Use it.
+
+	* Makefile (ELFILES): Add haskell-c, haskell-cabal,
+	and haskell-simple-indent.
+
 2007-11-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* haskell-cabal.el (haskell-cabal-get-setting):
